pkg/readiness/testdata/99-assignmetadata.yaml
apiVersion: mutations.gatekeeper.sh/v1alpha1
kind: AssignMetadata
metadata:
  name: demo
spec:
    match:
      scope: Namespaced
      kinds:
        - apiGroups: ["*"]
          kinds: ["Pod"]
    location: "metadata.labels.demolabel"
    parameters:
      assign:
        value:  "demo"
