pkg/readiness/testdata/99-bad-rego.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: badrego
spec:
  crd:
    spec:
      names:
        kind: BadRego
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package badrego

        }{}{
