pkg/readiness/testdata/99-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: "some-config-map"
  namespace: "gatekeeper-system"
data:
  foo: bar
