pkg/readiness/testdata/99-provider.yaml
apiVersion: externaldata.gatekeeper.sh/v1alpha1
kind: Provider
metadata:
  name: demo
spec:
  url: http://demo
  timeout: 1
